tdf#104228 RTF import: fix override of style left/right para margin

See commit 1be0a3fa9ebb22b607c54b47739d4467acfed259 (n#825305:
writerfilter RTF import: override style properties like Word,
2014-06-17) for the details, this bug was about the same, just for two
more paragraph properties. Specify the default values for them, so
override of style value as direct formatting works as expected.

Change-Id: I353cc3ae8c35baf1b5ed5a83a8bd131c7bfbbe64